# helixir

./: .clippy.toml  .dockerignore  .gitignore  README.md  config.example.yaml  docker-compose.yml
helixir-rs/: .gitignore  Cargo.toml  Dockerfile  quickstart.sh
helixir-rs/src/core/: cache.rs  config.rs  error.rs  helixir_client.rs  mod.rs  search_modes.rs
helixir-rs/src/core/events/: bus.rs
helixir-rs/src/core/levels/: definitions.rs  mod.rs  models.rs  utils.rs
helixir-rs/src/core/services/: mod.rs
helixir-rs/src/core/services/chunking/: config.rs  service.rs  splitter.rs
helixir-rs/src/core/services/linking/: builder.rs  mod.rs
helixir-rs/src/core/services/resolution/: mod.rs  service.rs
helixir-rs/src/core/velocity/: models.rs
helixir-rs/src/db/: client.rs
helixir-rs/src/llm/: extractor.rs  mod.rs
helixir-rs/src/llm/decision/: mod.rs
helixir-rs/src/llm/providers/: base.rs  mod.rs
helixir-rs/src/mcp/: server.rs
helixir-rs/src/toolkit/: tooling_manager.rs
helixir-rs/src/toolkit/mind_toolbox/integrator/: finder.rs  mod.rs  reasoner.rs  similarity.rs
helixir-rs/src/toolkit/mind_toolbox/memory/: context.rs  crud.rs  evolution.rs  retrieval.rs  supersession.rs  user_link.rs
helixir-rs/src/toolkit/mind_toolbox/memory/deletion/: cleanup.rs  hard.rs  manager.rs  models.rs
helixir-rs/src/toolkit/mind_toolbox/memory/remark/: mod.rs  pipeline.rs
helixir-rs/src/toolkit/mind_toolbox/memory_chain/: strategy.rs
helixir-rs/src/toolkit/mind_toolbox/ontology/: hierarchy.rs  loader.rs
helixir-rs/src/toolkit/mind_toolbox/reasoning/: engine.rs
helixir-rs/src/toolkit/mind_toolbox/search/: hybrid.rs  mod.rs  vector.rs
helixir-rs/src/toolkit/mind_toolbox/search/onto_search/: models.rs
helixir-rs/src/toolkit/mind_toolbox/search/query_processor/: models.rs  patterns.rs  processor.rs
helixir-rs/src/toolkit/mind_toolbox/search/smart_traversal_v2/: models.rs  phases.rs  scoring.rs  traversal.rs
src/: lib.rs  utils.rs
src/db/: mod.rs
(+65 files in other folders)
